--- a/index.html
+++ b/index.html
@@ -55,58 +55,72 @@
         명의 회원이 쏘카와 <br>
         함께하고 있습니다. <br>
         지금바로 <span>쏘카 드라이브를</span> <br> 시작하세요.
-        <div id="blue-rect" class = "standby"></div>
+        <div id ="blue-rect" class = "standby"></div>
     </section>
 
     <footer>
-        <nav>
+        <div id= "footer-container">
+
             <ul class = "sns-list">
                 <li>
-                    <figure><img src="/img/i-instagram.svg" alt="instagram"></figure>
-                </li>
-                <li>
-                    <figure><img src="/img/i-facebook.svg" alt="facebook"></figure>
-                </li>
-                <li>
-                    <figure><img src="/img/i-youtube.svg" alt="youtube"></figure>
-                </li>
-                <li>
-                    <figure><img src="/img/i-blog.svg" alt="naver blog"></figure>
-                </li>
+                <figure><img src="/img/i-instagram.svg" alt="instagram"></figure>
+            </li>
+            <li>
+                <figure><img src="/img/i-facebook.svg" alt="facebook"></figure>
+            </li>
+            <li>
+                <figure><img src="/img/i-youtube.svg" alt="youtube"></figure>
+            </li>
+            <li>
+                <figure><img src="/img/i-blog.svg" alt="naver blog"></figure>
+            </li>
+        </ul>
+
+        <nav>
+            <ul id = "no-one-watch-this">
+                <li><a href="#">회사소개</a></li>
+                <li><a href="#">인재채용</a></li>
+                <li><a href="#">나눔카</a></li>
+                <li><a href="#">이용약관</a></li>
+                <li><a href="#"><b>개인정보처리방침</b></a></li>
+                <li><a href="#"><b>위치정보이용약관</b></a></li>
+                <li><a href="#"><b>차량손해면책제도</b></a></li>
+                <li><a href="#">고객센터</a></li>
+                <li><a href="#">제휴 문의</a></li>
             </ul>
         </nav>
-
-        <ul>
-            <li><a href="#">회사소개</a></li>
-            <li><a href="#">인재채용</a></li>
-            <li><a href="#">나눔카</a></li>
-            <li><a href="#">이용약관</a></li>
-            <li><a href="#"><b>개인정보처리방침</b></a></li>
-            <li><a href="#"><b>위치정보이용약관</b></a></li>
-            <li><a href="#"><b>차량손해면책제도</b></a></li>
-            <li><a href="#">고객센터</a></li>
-            <li><a href="#">제휴 문의</a></li>
-        </ul>
-        <div>
-            <div id = "ct"></div>
-            <dl>
-                <dt></dt>
-                <dt></dt>
-                <dt></dt>
-            </dl>
-
-            <div id = "info"></div>
-                <p></p>
+        <div id = "info-container">
+            <div id = "cop-info">
                 <dl>
-                    <dt></dt>
-                    <dt></dt>
-                    <dt></dt>
+                    <dt>주소</dt>
+                    <dd>제주특별자치도 제주시 연미길 42(오라삼동)</dd>
                 </dl>
-                <p></p>
+                <dl>
+                    <dt>전화</dt>
+                    <dd>1661-3315</dd>
+                </dl>
+                <dl>
+                    <dt>팩스</dt>
+                    <dd>02-6969-9333</dd>
+                </dl>
+            </div>
+
+            <div id = "info">
+                <p>(주)쏘카 통신판매업 <a href="#">사업자정보 확인</a></p>
+                <p>신고: 제 2019-제주오라-3호, 사업자등록번호: 616-81-90529, 대표자: 박재욱</p>
+                <p>© 2019 SOCAR All rights reserved.</p>
+            </div>
         </div>
     </footer>
+    <div id = "app-download-sticker">
+        <a href="#">
+            <div id = "app-downloader-container">
+                <h3>쏘카 앱 다운로드 ↓</h3>
+            </div>
+            <img src="/img/i-appicon.svg" alt="쏘카 어플리케이션">
+        </a>
+    </div>
+
     <script src="js/index.js"></script>
-
-
 </body>
 </html>
