--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
             <img src="/img/i-appicon.svg" alt="쏘카 어플리케이션">
         </a>
     </div>
-
+    <div>
+        
+    </div>
     <script src="js/index.js"></script>
 </body>
 </html>
